@@ -1,6 +1,8 @@
 Changes between 1.0.2 and '1.1.0b1'
 =====================================
 
+* fix issue #59 - robustify unittest test collection
+
 * make bpython/help interaction work by adding an __all__ attribute 
   to ApiModule, cleanup initpkg
 
